# kspd_blog

./: .gitignore  README.md  package.json  release.mjs  vite.config.ts
admin__desktop/: .prettierrc.json  bun.lockb  eslint.config.js  global.d.ts  index.html  package.json  release.mjs  tsconfig.json  vite.config.ts
admin__desktop/resources/config/: properties.json
admin__desktop/resources/css/: global.css
admin__desktop/resources/sass/: global.sass
admin__desktop/rust/: Cargo.toml  tauri.conf.json
admin__desktop/rust/src/: main.rs
admin__desktop/src/: Startup.tsx  main.tsx
admin__desktop/src/context/: AppBarContext.tsx  AuthContext.tsx  ColorSchemaContext.tsx  HomeContext.tsx  PostContext.tsx  StackContext.tsx
admin__desktop/src/hooks/: useAuth.ts  useColorSchema.ts  usePost.ts  useStacks.ts
admin__desktop/src/pages/: EditPostPage.tsx  HomePage.tsx  SessionPage.tsx  UserPage.tsx
admin__desktop/src/router/: Router.tsx
admin__desktop/src/utils/: formatDate.ts  minimizeText.ts  socialIcons.ts  uuidv4.ts
admin__desktop/tauri/: Cargo.toml
admin__desktop/tauri/src/: main.rs
resources/config/: properties.json
resources/sass/: global.sass
rust/: Cargo.toml  tauri.conf.json
src/: main.tsx
src/components/home/: UIOffcanvasAppNavigation.tsx
src/components/shared/: UITextarea.tsx
src/components/user/: UIAvatar.tsx  UIFormProfile.tsx
src/context/: AuthContext.tsx  StackContext.tsx
src/hooks/: useColorSchema.ts  usePost.ts
src/pages/: SessionPage.tsx
src/router/: Router.tsx
src/utils/: formatDate.ts  generateWinw.ts
(+63 files in other folders)
